change lever press link (again)

--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -113,7 +113,7 @@ layout: default
         </div>
         <div class="col s12 m4">
           <figure>
-            <a href="https://leverpress.org">
+            <a href="/leverpress">
               <img class="vertical" src="/img/partners/lever.png" alt="Lever Press Logo">
             </a>
           </figure>
