HELIO-2205 - changes to the Fulcrum homepage, about page, accessibility page, and minor tweaks to other files to consistently reflect those changes.

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -4,21 +4,34 @@ title: About
 permalink: /about/
 ---
 
-<p>While able to present conventional publication formats in a reader-friendly way, Fulcrum particularly addresses the needs of scholarly authors who wish to link source materials to book-length interpretations of them in an integrated way. This is an emerging need in media-rich humanistic fields such as performing arts, cultural studies, and archaeology. From accumulating collections of film and video clips for comparison to visualizing excavation records through three-dimensional interactive models, humanists today often end their research projects with large archives of digital data. Rather than forcing authors to strip away the richness of these materials at the point of formal publication to meet the constraints of a book or journal article format, Fulcrum facilitates rich integration of such digital objects with the narratives that reference them. They can either be published as supplemental materials, with the narrative (a book, a journal article) elsewhere, or both narrative and data can be presented together.</p>
+<p>While able to present conventional publication formats in a reader-friendly way, Fulcrum particularly addresses the needs of scholarly authors who wish to link source materials to book-length interpretations of them in an integrated way. This is an emerging need in media-rich humanistic fields such as performing arts, cultural studies, and archaeology. From accumulating collections of film and video clips for comparison to visualizing excavation records through three-dimensional interactive models, humanists today often end their research projects with large archives of digital data.</p>
 
-<p>The platform consists of a client-branded hosting environment with intuitive workflows and a set of value-added publishing services to help partner publishers expand their capabilities.</p>
+<p>Rather than forcing authors to strip away the richness of these materials at the point of formal publication to meet the constraints of a book or journal article format, Fulcrum facilitates rich integration of such digital objects with the narratives that reference them. They can either be published as supplemental materials, with the narrative (a book, a journal article) elsewhere, or both narrative and data can be presented together.</p>
+
+<p>The platform consists of a client-branded hosting environment and a set of value-added publishing services to help partner publishers expand their capabilities. <!-- For more information, <a href="/partnerships">read about our partnership models and services</a>. --></p>
 
 <p>Fulcrum has been developed by a group of campus-based publishers working closely with disciplinary faculty and information science specialists who recognize the changing nature of scholarly publishing in the humanities and qualitative social sciences. <a href="http://www.publishing.umich.edu/projects/hydra/">Initial development has been supported by a generous grant from the Andrew W. Mellon Foundation</a> and implemented by the University of Michigan Library and Press working with partners from Indiana, Minnesota, Northwestern, and Penn State universities.</p>
 
-<p>Fulcrum is currently under development but seeks partners interested in being early adopters. For more information about the platform, please contact us at <a href="mailto:fulcrum-info@umich.edu">fulcrum-info@umich.edu</a> or <a href="/index.html#get-updates">subscribe to our newsletter</a>.</p>
+<p>For more information about the platform, please subscribe to our <a href="https://fulcrum.org/#get-updates">newsletter</a>, follow us on <a href="https://twitter.com/fulcrumpub">Twitter</a>, or send an e-mail to <a href="mailto:fulcrum-info@umich.edu">fulcrum-info@umich.edu</a>.</p>
+
+<h2 id="readers">For Readers</h2>
+<p>Fulcrum provides the following advantages to readers/users:</p>
+
+<ul>
+  <li>Flexibility: Scholarship published on Fulcrum is optimized for display on mobile and other devices. A strong commitment to <a href="https://fulcrum.org/accessibility">accessibility</a> for readers with disabilities translates into a passion for good digital design. Multimedia files and visualizations published on Fulcrum can be played natively within the platform or, where permission is available, downloaded for offline use.</li>
+  <li>Durability: No more link rot. Fulcrum exists to make sure that digital scholarship is curated in a stable environment that allows readers to cite work published online without fear of broken references. Ensuring clarity around intellectual property rights has been a focus of Fulcrum’s design, so it is always clear to users if a particular object can be downloaded and/or reused in their own scholarship and teaching.</li>
+  <li>Discoverability: Heard about a cool digital project and now unable to locate it through your library catalog? Scholarship published through Fulcrum is integrated into both traditional and emerging information supply chains.</li>
+  <li>Accessibility: Fulcrum is compatible with most screen readers and keyboard controls and also provides resources to support accessible books, image descriptions, transcripts for audio, captions for video, and alternative formats for digitized content.</li>
+</ul>
 
 <h2 id="authors">For Authors</h2>
 <p>Fulcrum provides the following advantages to authors:</p>
 
 <ul>
-  <li>Flexibility: Can present rich media files as well as text and images, and is adding support for more complex visualizations such as interactive models built in Unity3D. Being a node in the vibrant open source Samvera development community focused on the needs of the academy, Fulcrum is continually developing new capabilities relevant to authors.</li>
+  <li>Flexibility: Fulcrum can present rich media files as well as text and images, and has added support for more complex visualizations such as interactive models built in Unity3D. Being a node in the vibrant open source Samvera development community focused on the needs of the academy, Fulcrum is continually developing new capabilities relevant to authors.</li>
   <li>Durability: Built on an open source university infrastructure dedicated to providing durable long-term stewardship for digital objects. Each item (an image, a video or audio file, a visualization) receives a permanent digital identifier that allows it to be securely cited. Settings related to reuse are controlled by the creator.</li>
-  <li>Discoverability: Through use of industry standards and relationships, ensures that digital scholarship is discoverable and that authors therefore receive metrics of impact and credit for their work, from download counts to altmetric scores. Integration into the information supply chain ensures that content published on Fulcrum appears in library catalogs and other important user access points, addressing the “discoverability challenge” that besets much born digital scholarship.</li>
+  <li>Discoverability: Through use of industry standards and relationships, ensures that digital scholarship is discoverable and that authors therefore receive metrics of impact and credit for their work, from download counts to Altmetric scores. Integration into the information supply chain ensures that content published on Fulcrum appears in library catalogs and other important user access points, addressing the “discoverability challenge” that besets much born digital scholarship.</li>
+  <li>Accessibility: As an author, you can describe visual resources to make your work more accessible, and let publishers and image rights holders know that accessibility is important to you.</li>
 </ul>
 
 <h2 id="publishers">For Publishers</h2>
@@ -27,14 +40,10 @@ permalink: /about/
 <ul>
   <li>Flexibility: Hosted options are flexible, ranging from support for a single object to full presentation of a publisher’s complete list. The ability to represent new types of objects is continually being added through the efforts of the Samvera community. At the same time, processes and workflows are familiar to editors and other publishing production staff and are fully documented. Underlying code is available on an open source basis.</li>
   <li>Durability: Digital scholarship presents many preservation challenges. Fulcrum provides best-in-class, trusted solutions for long term preservation. Fedora underpinnings provide a durable infrastructure base, and digital scholarship published through Fulcrum is preserved by University of Michigan Library.</li>
-  <li>Discoverability: All objects are made discoverable using stable identifiers, allowing integration with information supply chain vendors and other partners such as altmetric aggregators. Measurement of usage and impact is core to the platform’s design and the hosted service supports both access restricted and open access content.</li>
+  <li>Discoverability: All objects are made discoverable using stable identifiers, allowing integration with information supply chain vendors and other partners such as Altmetric aggregators. Measurement of usage and impact is core to the platform’s design and the hosted service supports both access restricted and open access content.</li>
+  <li>Accessibility: Accessible content is the primary responsibility of each publisher and we can work with you to support and improve the accessibility of your content.</li>
 </ul>
 
-<h2 id="readers">For Readers</h2>
-<p>Fulcrum provides the following advantages to readers/users:</p>
-
-<ul>
-  <li>Flexibility: Scholarship published on Fulcrum is optimized for display on mobile and other devices. A strong commitment to accessibility for readers with disabilities translates into a passion for good digital design. Multimedia files and visualizations published on Fulcrum can be played natively within the platform or, where permission is available, downloaded for offline use.</li>
-  <li>Durability: No more link rot. Fulcrum exists to make sure that digital scholarship is curated in a stable environment that allows readers to cite work published online without fear of broken references. Ensuring clarity around intellectual property rights has been a focus of Fulcrum’s design, so it is always clear to users if a particular object can be downloaded and/or reused in their own scholarship and teaching.</li>
-  <li>Discoverability: Heard about a cool digital project and now unable to locate it through your library catalog? Scholarship published through Fulcrum is integrated into both traditional and emerging information supply chains.</li>
-</ul>
+<!-- <div class="row center">
+  <a href="/partnerships" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">Partner with Us</a>
+</div> -->
