--- a/fulcrum/accessibility.html
+++ b/fulcrum/accessibility.html
@@ -3,13 +3,13 @@ layout: page
 title: Accessibility
 permalink: /accessibility/
 ---
-<p class="milli">Last updated: August 18, 2018</p>
+<p class="milli">Last updated: October 15, 2018</p>
 
 <p>Accessibility is a core value and design component of Fulcrum. We are dedicated to creating inclusive services and content for all readers, and are constantly working to make Fulcrum and its content as accessible and usable as possible.</p>
 
-<p>The Fulcrum platform aims to meet <a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1" title="Web Content Accessibility Guidelines 2.1 AA">WCAG 2.1 AA Standards</a> in both the platform and its content by providing infrastructure and resources to support accessible books, image descriptions, transcripts for audio, captions for video, and alternative formats for digitized content.</p>
+<p>The Fulcrum platform aims to meet the latest <a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1" title="Web Content Accessibility Guidelines 2.1 AA">WCAG 2 AA Standards</a> (currently WCAG 2.1 AA) in both the platform and its content by providing infrastructure and resources to support accessible books, image descriptions, transcripts for audio, captions for video, and alternative formats for digitized content.</p>
 
-<p>The extent to which Fulcrums meets WCAG 2.0 and Section 508 of the U.S. Rehabilitation Act is reported in Fulcrum's <a href="/docs/Fulcrum-VPAT2.1-20180818.pdf">Voluntary Product Accessibility Template (VPAT) Version 2.1</a>.</p>
+<p>The extent to which Fulcrums meets WCAG 2.0 and Section 508 of the U.S. Rehabilitation Act is measured and reported in Fulcrum's <a href="/docs/Fulcrum-VPAT2.1-20180818.pdf">Voluntary Product Accessibility Template (VPAT) Version 2.1</a>.</p>
 
 <p>Accessibility features, compatibility, and known issues are also summarized on this page.</p>
 
