--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -5,9 +5,9 @@ layout: default
 <div id="index-banner" class="parallax-container">
   <div class="section no-pad-bot">
     <div class="container">
-        <p class="header center zeta">Optimize your scholarship</p>
+        <p class="header center zeta tagline">Infrastructure and services for mission-driven publishers</p>
         <div class="row center">
-          <p class="col s12 white-text gamma">Fulcrum is a publishing platform currently under development that helps publishers present the full richness of their authors' research outputs in a durable, discoverable, and flexible form.</p>
+          <p class="col s12 white-text gamma">Fulcrum is a community-based, open source publishing platform that helps publishers present the full richness of their authors' research outputs in a durable, discoverable, accessible and flexible form.</p>
         </div>
         <div class="row center">
           <a href="#get-updates" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">Get Updates</a>
@@ -18,7 +18,6 @@ layout: default
     </div>
     <div class="parallax"><img src="/img/background-1.png" alt="Unsplashed background img 1"></div>
 </div>
-
 
 <div class="container">
     <div class="section">
@@ -34,7 +33,7 @@ layout: default
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block">
             <span class="center brown-text icon"><i class="material-icons">timeline</i></span>
             <span class="center value">Flexible</span>
@@ -43,7 +42,7 @@ layout: default
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block">
             <span class="center brown-text icon"><i class="material-icons">link</i></span>
             <span class="center value">Durable</span>
@@ -52,7 +51,7 @@ layout: default
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m3">
           <div class="icon-block">
             <span class="center brown-text icon"><i class="material-icons">location_searching</i></span>
             <!-- <h2 class="center brown-text icon"><i class="material-icons">find_in_page</i></h2> -->
@@ -60,6 +59,15 @@ layout: default
             <span class="center value">Discoverable</span>
 
             <p class="light">Interoperable with other publishing tools and integrated into the information supply chain, Fulcrum ensures that content is discovered by readers and impact is tracked.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m3">
+          <div class="icon-block">
+            <span class="center brown-text icon"><i class="material-icons">accessibility</i></span>
+            <span class="center value">Accessible</span>
+
+            <p class="light">Dedicated to creating inclusive services and content for all readers, Fulcrum aims to implement accessible systems and features and effect change among peers and partners by sharing and maintaining a high standard of accessibility.</p>
           </div>
         </div>
       </div>
@@ -71,7 +79,7 @@ layout: default
     <div class="section no-pad-bot phases">
       <div class="container">
         <div class="row center">
-          <div class="header col s12 white-text"><p class="blurb">In its first phase the Fulcrum team has focused on providing branded companion websites for books. Now, in its second phase, it will expand to host complete ebook collections, journals, and new forms of multimodal publications.</p></div>
+          <div class="header col s12 white-text"><p class="blurb">In its first phase the Fulcrum team focused on providing branded companion websites for books. Now, in its second phase, we are working to host complete ebook collections, journals, and new forms of multimodal publications.</p></div>
         </div>
       </div>
     </div>
@@ -279,7 +287,7 @@ layout: default
         <h2 class="u-screenreader">Development</h2>
         <div class="container">
           <div class="row center">
-            <p class="col s12 white-text gamma">Fulcrum is being developed by a group of campus-based publishers working closely with disciplinary faculty and information science specialists who recognize the changing nature of scholarly publishing in the humanities and qualitative social sciences. Initial development has been supported by a generous grant from the Andrew W. Mellon Foundation and implemented by the University of Michigan Library and Press working with partners from Indiana, Minnesota, Northwestern, and Penn State universities. <a class="underline" href="/about/" title="Read more about Fulcrum">Read more...</a></p>
+            <p class="col s12 white-text gamma">Fulcrum is the name under which Michigan Publishing provides essential infrastructure to the mission-driven academic publishing community. It encompasses a next-generation open source platform and a full range of supporting services. Fulcrum has been developed with support from the Andrew W. Mellon Foundation and is being made available as a hosted solution through a business development relationship with LYRASIS. Fulcrum services are provided by a team of publishing experts based in Ann Arbor, Michigan. <a class="underline" href="/about/" title="Read more about Fulcrum">Read more about Fulcrum...</a></p>
           </div>
         </div>
       </div>
@@ -290,7 +298,7 @@ layout: default
     <div class="section">
       <div class="row">
         <div class="col s12 center">
-          <h2>Sign Up For Updates</h2>
+          <h2>Sign Up For the Fulcrum Newsletter</h2>
         </div>
       </div>
       <div class="row">
