HELIO-1545 - build out remainder of partner-with-us page

--- a/fulcrum/about.html
+++ b/fulcrum/about.html
@@ -45,5 +45,5 @@ permalink: /about/
 </ul>
 
 <div class="row center">
-  <a href="/partner-with-us" id="button--get-updates" class="btn-large button--lg waves-effect waves-light lighten-1">Partner with Us</a>
+  <a href="/partner-with-us" class="btn-large button--lg waves-effect waves-light lighten-1">Partner with Us</a>
 </div>
