--- a/fulcrum/index.html
+++ b/fulcrum/index.html
@@ -150,6 +150,11 @@ layout: default
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col s10 m6 l4 offset-s1 offset-m3 offset-l4 center">
+          <a href="/partner-with-us/" class="btn-large button--lg waves-effect waves-light lighten-1">Partner with Us</a>
+        </div>
+      </div>
     </div>
     <hr class="brand" />
     <div class="section case-study">
