--- a/fulcrum/preservation.html
+++ b/fulcrum/preservation.html
@@ -54,7 +54,7 @@ as possible.</li>
 preservation strategies, as detailed below. U-M Library is a sustaining member
 of the Software Preservation Network and is following with interest research in
 the area of sustainable emulation strategies, but we are not yet employing an
-emulation strategy at this time</p>
+emulation strategy at this time.</p>
 
 <h3>Institutional and Geographic Diversity</h3>
 <p>Fulcrum fulfills its preservation commitments through a strategy based on
